# m4a_mp3_download_and_report

./: .gitignore  README.md  Windows用exe化手順.md  build_app.sh  build_app_windows.bat  excel_processor.py  file_processor.py  macOSからwindowsExeを作成する方法.md  main.py  pyproject.toml  requirements.txt  ui.py  utils.py
.github/workflows/: build-windows-exe.yml
